* feat(SETUP-2): added sass to the project
* feat(SETUP-2): fixed sass imports and linked them to the home page

* feat(SETUP-2): added company name and desc from translations to the home page

* feat(SETUP-2): added primary app colors for accents and text

* feat(SETUP-2): changed classes in App.jsx to follow BEM naming convention

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -1,6 +1,9 @@
 /* mixins for each display type (eg. H1, H2 ..., B1, B2 ...) */
-@import 'styles/variables/font-styles';
-@import 'styles/mixins';
+@import 'src/styles/mixins';
+
+$body-font-family: 'Roboto', 'sans serif';
+$body-font-style: normal;
+$body-letter-spacing: 0em;
 
 /* common attributes among text elements */
 @mixin body-font-style {
