--- a/src/styles/variables/dimensions.scss
+++ b/src/styles/variables/dimensions.scss
@@ -1,5 +1,5 @@
-@import 'styles/mixins';
-@import 'styles/variables/colors';
+@import 'src/styles/mixins';
+@import 'src/styles/variables/colors';
 
 /* constants */
 $border-radius-sm: 4px;
