--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,21 +1,20 @@
+/* greyscale colors */
 $app-black: #282c34;
 $dark-gray: #323232;
 $gray: #A6A6A6;
 $gray-light: #E8E8E8;
 $gray-shadow: rgba(0, 0, 0, 0.2);
+$white: white;
+
+/* colors */
+$lime-green: #b0ff38;
+$green: #9ACC50;
+$green-dark: #729F3E;
 $red: #E2350D;
 $red-dark: #962309;
 $teal: #61dafb;
-$white: white;
-
-/* main app colors */
-$accent-color: $red;
-$accent-color-active: $red-dark;
-$app-bg: linear-gradient(180deg, rgba(43, 43, 43, 0.15) 0%, rgba(43, 43, 43, 0) 100%);
-$modal-overlay: rgba(0, 0, 0, 0.5);
 
 /* pokemon type colors */
-$type-color-bug: #729F3E;
 $type-color-dark: #707070;
 $type-color-dragon-blue: #53A3CF;
 $type-color-dragon-red: #F16D56;
@@ -26,7 +25,6 @@ $type-color-fire: #FD7C24;
 $type-color-flying-blue: #3CC7EE;
 $type-color-flying-gray: #BEB9B9;
 $type-color-ghost: #7B62A3;
-$type-color-grass: #9ACC50;
 $type-color-ground-yellow: #F7DE3F;
 $type-color-ground-brown: #AB9842;
 $type-color-ice: #51C4E7;
@@ -37,8 +35,17 @@ $type-color-rock: #A28C21;
 $type-color-steel: #9DB7B7;
 $type-color-water: #4592C3;
 
+
+/** Main app colors */
+$accent-color-primary: $lime-green;
+$accent-color-secondary: $green;
+$accent-color-active: $green-dark;
+$app-bg: linear-gradient(180deg, rgba(43, 43, 43, 0.15) 0%, rgba(43, 43, 43, 0) 100%);
+$modal-overlay: rgba(0, 0, 0, 0.5);
+
 /* text colors */
 $text-black: #000000;
 $text-gray: $gray;
-$text-accent: $accent-color;
+$text-accent: $accent-color-primary;
 $text-white: #FFFFFF;
+$text-color-primary: $text-white;
