--- a/src/App.scss
+++ b/src/App.scss
@@ -20,7 +20,7 @@
   text-align: center;
 
   &__header {
-    background-color: #282c34;
+    background-color: $app-bg;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -40,12 +40,12 @@
   }
 
   &__description {
-    /* @include B2-16($text-color-primary); */
+    @include B1-24($text-color-primary);
     margin: 0;
     padding-bottom: 0.5rem;
   }
   &__title {
-    /* @include H2-24($text-color-primary); */
+    @include H1-32($text-color-primary);
     margin: 1rem 0;
   }
 }
