--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,5 +1,6 @@
 /* greyscale colors */
 $app-black: #282c34;
+$app-black-dark: #1a1d23;
 $dark-gray: #323232;
 $gray: #A6A6A6;
 $gray-light: #E8E8E8;
@@ -10,6 +11,9 @@ $white: white;
 $lime-green: #b0ff38;
 $green: #9ACC50;
 $green-dark: #729F3E;
+$magenta: #f4269e;
+$magenta-dark: #be1b7a;
+$magenta-light: #f863ba;
 $red: #E2350D;
 $red-dark: #962309;
 $teal: #61dafb;
@@ -37,10 +41,10 @@ $type-color-water: #4592C3;
 
 
 /** Main app colors */
-$accent-color-primary: $lime-green;
-$accent-color-secondary: $green;
-$accent-color-active: $green-dark;
-$app-bg: linear-gradient(180deg, rgba(43, 43, 43, 0.15) 0%, rgba(43, 43, 43, 0) 100%);
+$accent-color-primary: $magenta;
+$accent-color-secondary: $magenta-dark;
+$accent-color-active: $magenta-light;
+$app-bg: $app-black-dark;
 $modal-overlay: rgba(0, 0, 0, 0.5);
 
 /* text colors */
