--- a/src/styles/variables/dimensions.scss
+++ b/src/styles/variables/dimensions.scss
@@ -22,6 +22,7 @@ $nav-item-border: 0.25rem solid transparent;
 
 /* height and widths */
 $checkbox-height: $spacer;
+$header-height: 10rem;
 $input-height: 3.5rem;
 $input-height-mobile: 3rem;
 $popup-max-height: calc(100% - #{$spacer-lg * 2});
