--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,7 @@
 @import 'styles/typography';
+@import 'styles/variables/breakpoints';
 @import 'styles/variables/colors';
+@import 'styles/variables/dimensions';
 
 @media (prefers-reduced-motion: no-preference) {
   .app__logo {
@@ -17,17 +19,22 @@
 }
 
 .app {
+  height: inherit;
   text-align: center;
 
-  &__header {
+  &__page {
     background-color: $app-bg;
-    min-height: 100vh;
+    min-height: calc(100% - $header-height);
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     font-size: calc(10px + 2vmin);
     color: $text-white;
+
+    @media (max-width: $breakpoint-mobile) {
+      min-height: calc(100% - $header-height/2);
+    }
   }
 
   &__link {
@@ -35,7 +42,7 @@
   }
 
   &__logo {
-    height: 40vmin;
+    height: 22.5rem;
     pointer-events: none;
   }
 
