--- a/src/styles/variables/colors.scss
+++ b/src/styles/variables/colors.scss
@@ -1,10 +1,14 @@
 /* greyscale colors */
 $app-black: #282c34;
 $app-black-dark: #1a1d23;
+$navy-blue-light: #003f8e;
+$navy-blue: #002451;
+$navy-blue-dark: #001733;
 $dark-gray: #323232;
 $gray: #A6A6A6;
 $gray-light: #E8E8E8;
-$gray-shadow: rgba(0, 0, 0, 0.2);
+$gray-shadow: rgba(0, 0, 0, 0.4);
+$white-shadow: rgba(255, 255, 255, 0.2);
 $white: white;
 
 /* colors */
@@ -44,8 +48,12 @@ $type-color-water: #4592C3;
 $accent-color-primary: $magenta;
 $accent-color-secondary: $magenta-dark;
 $accent-color-active: $magenta-light;
-$app-bg: $app-black-dark;
+$app-bg: $navy-blue-dark;
+$app-bg-dark: $navy-blue;
 $modal-overlay: rgba(0, 0, 0, 0.5);
+$sidenav-bg: $navy-blue;
+$sidenav-separator-color: $navy-blue-dark;
+$sidenav-color: $white;
 
 /* text colors */
 $text-black: #000000;
