--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .app__logo {
-    animation: app__logo-spin infinite 20s linear;
+    // animation: app__logo-spin infinite 20s linear;
   }
 }
 
@@ -54,8 +54,12 @@
   }
 
   &__logo {
-    height: 22.5rem;
+    height: 22rem;
     pointer-events: none;
+
+    @media (max-width: $breakpoint-mobile) {
+      height: 16rem;
+    }
   }
 
   &__description {
